# circadian_genes_bayesian

./: .gitignore  CMakeLists.txt  MCMC.cpp  MCMC_C_version.cpp  MCMC_edited.asv  MCMC_edited.m  PostProcessing.m  PostProcessing_RealData.m  README.md  TEST WRAPPER.R  UPDATES.cpp  UPDATES.h  Wrapper.R  Yreal.csv  dense_matrix.cpp  dense_matrix.h  launch_program.sh  synthetic_data_edited.m  test.cpp  test_9_12.cpp
Data/: B.csv  Bpred.csv  Lambda.csv  THETA.csv  Thetatilde.csv  W.csv  Y.csv  eta.csv  numeff.csv  synthetic_data_edited.m  tg.csv  thr1.csv  tij.csv
subsample_5000_genes/: 5k_genes copy.csv  indices_of_circadian_genes copy.txt  subsample_arabidopsis copy.R
